--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 
           <div class="col-lg-4 col-md-4 col-sm-10 col-12 d-block m-auto">
             <figure class="figure">
-                <img src="img/vm.jpg" class="figure-img img-fluid rounded-circle" >
+                <img src="img/mvk.jpg" class="figure-img img-fluid rounded-circle" >
                 <figcaption>
                     <h4>Varun Mithyantha</h4>
                     <button type="submit" class="btn btn-success" onclick="location.href='https://mvk24.github.io/Portfolio/';">More Info</button>
