--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       
       <div class="col">
         <div class="card">
-          <img src="img/p.JPG" class="card-img-top" alt="photography">
+          <img src="img/p.jpg" class="card-img-top" alt="photography">
           <div class="card-body">
             <h5 class="card-title">Photography</h5>
           </div>
@@ -147,7 +147,7 @@
 
       <div class="col">
         <div class="card">
-          <img src="img/tr.gif" class="card-img-top" alt="Travel">
+          <img src="img/travel.gif" class="card-img-top" alt="Travel">
           <div class="card-body">
             <h5 class="card-title">Travel</h5>
           </div>
@@ -193,7 +193,7 @@
 
             <div class="col-lg-4 col-md-4 col-sm-10 col-12 d-block m-auto">
                 <figure class="figure">
-                    <img src="img/sam1.jpg" class="figure-img img-fluid rounded-circle" >
+                    <img src="img/sam.jpg" class="figure-img img-fluid rounded-circle" >
                     <figcaption>
                         <h4>Sam Manasseh</h4>
                         <button type="submit" class="btn btn-success" onclick="location.href='https://sam346646.github.io/Sam_portfolio/';">More Info</button>
