--- a/index.html
+++ b/index.html
@@ -101,18 +101,9 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card">
-          <img src="img/web.webp" class="card-img-top" alt="Web Development">
+          <img src="img/web.jpg" class="card-img-top" alt="Web Development">
           <div class="card-body">
             <h5 class="card-title">Web Development</h5>
-          </div>
-        </div>
-      </div>
-      
-      <div class="col">
-        <div class="card">
-          <img src="img/p.jpg" class="card-img-top" alt="photography">
-          <div class="card-body">
-            <h5 class="card-title">Photography</h5>
           </div>
         </div>
       </div>
@@ -144,10 +135,18 @@
         </div>
       </div>
      
+      <div class="col">
+        <div class="card">
+          <img src="img/photo.jpg" class="card-img-top" alt="photography">
+          <div class="card-body">
+            <h5 class="card-title">Photography</h5>
+          </div>
+        </div>
+      </div>
 
       <div class="col">
         <div class="card">
-          <img src="img/travel.gif" class="card-img-top" alt="Travel">
+          <img src="img/tr.webp" class="card-img-top" alt="Travel">
           <div class="card-body">
             <h5 class="card-title">Travel</h5>
           </div>
